Third View Controller added

--- a/TabViewExample/Base.lproj/Main.storyboard
+++ b/TabViewExample/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AHF-hj-5cu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Contacts" translatesAutoresizingMaskIntoConstraints="NO" id="AHF-hj-5cu">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -29,7 +29,7 @@
             </objects>
             <point key="canvasLocation" x="2568" y="847"/>
         </scene>
-        <!--Second View Controller-->
+        <!--Music-->
         <scene sceneID="fHh-70-9ab">
             <objects>
                 <viewController id="mr4-9w-dws" customClass="SecondViewController" customModule="TabViewExample" customModuleProvider="target" sceneMemberID="viewController">
@@ -37,7 +37,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Lcp-AJ-DC0">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Music" translatesAutoresizingMaskIntoConstraints="NO" id="Lcp-AJ-DC0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -45,13 +45,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="maE-rW-7aw"/>
                     </view>
-                    <tabBarItem key="tabBarItem" systemItem="downloads" id="oec-Dw-Z6m"/>
+                    <tabBarItem key="tabBarItem" title="Music" selectedImage="music.note" catalog="system" id="oec-Dw-Z6m"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rxc-Sd-800" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="785.50724637681162" y="2420.7589285714284"/>
         </scene>
-        <!--Item-->
+        <!--Camera-->
         <scene sceneID="kry-SI-mXt">
             <objects>
                 <viewController id="Lwz-gQ-ia6" customClass="FourthViewController" customModule="TabViewExample" customModuleProvider="target" sceneMemberID="viewController">
@@ -67,13 +67,13 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="bcj-er-Yus"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="i43-WA-2Rp"/>
+                    <tabBarItem key="tabBarItem" title="Camera" selectedImage="camera" catalog="system" id="i43-WA-2Rp"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zWi-XN-U5s" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2643" y="1964"/>
         </scene>
-        <!--Map-->
+        <!--Maps-->
         <scene sceneID="N20-JK-KVk">
             <objects>
                 <viewController id="cKt-zz-fzY" customClass="FirstViewController" customModule="TabViewExample" customModuleProvider="target" sceneMemberID="viewController">
@@ -81,7 +81,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pin " translatesAutoresizingMaskIntoConstraints="NO" id="Wrr-dR-lw3">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Maps" translatesAutoresizingMaskIntoConstraints="NO" id="Wrr-dR-lw3">
                                 <rect key="frame" x="0.0" y="44" width="414" height="769"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -89,7 +89,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="lxG-GW-BsG"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Map" selectedImage="map" catalog="system" id="jbh-48-kEz"/>
+                    <tabBarItem key="tabBarItem" title="Maps" selectedImage="map" catalog="system" id="jbh-48-kEz"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ed0-8U-kBe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -117,7 +117,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Contacts" width="699" height="466"/>
+        <image name="Maps" width="1100" height="837"/>
+        <image name="Music" width="1200" height="630"/>
+        <image name="camera" catalog="system" width="64" height="48"/>
         <image name="map" catalog="system" width="64" height="56"/>
-        <image name="pin " width="1100" height="837"/>
+        <image name="music.note" catalog="system" width="48" height="64"/>
     </resources>
 </document>
